# experiment_matsuzawa_250916

./: README.md  output.txt  pyproject.toml
.github/workflows/: run_experiment.yml  run_experiment_with_claude_code.yml
.research/: research_history.json
.research/iteration1/: error.txt  output.txt
.research/iteration10/: error.txt  output.txt
.research/iteration12/: error.txt  output.txt
.research/iteration12/training_full/: emissions.csv  training_results_exp1_1758029525.json
.research/iteration12/training_smoke/: emissions.csv  training_results_exp1_1758029511.json
.research/iteration13/: error.txt  output.txt
.research/iteration14/: error.txt  output.txt
.research/iteration14/results_20250916-122950/: exp1_accuracy_resnet50.a1_in1k_synthetic_shot_BN_eta0.25_seed42.parquet  exp1_accuracy_resnet50.a1_in1k_synthetic_shot_Tent_eta0.25_seed42.parquet
.research/iteration15/: error.txt  output.txt  summary_20250916-124543.json
.research/iteration15/results_20250916-124434/: exp1_accuracy_resnet50.a1_in1k_synthetic_shot_BN_eta0.25_seed42.parquet  exp1_accuracy_resnet50.a1_in1k_synthetic_shot_Tent_eta0.25_seed42.parquet  (+8 more)
.research/iteration16/: error.txt  output.txt
.research/iteration17/: error.txt  evaluation_report_exp1_1758029495.json  evaluation_report_exp1_1758029525.json  output.txt
.research/iteration18/: error.txt  output.txt
.research/iteration19/: error.txt  output.txt
.research/iteration2/: error.txt  output.txt  results_20250916T041813.json  results_20250916T042051Z.json
.research/iteration2/artifacts/: model.pt
.research/iteration20/: error.txt  output.txt
.research/iteration21/: error.txt  output.txt
.research/iteration23/: error.txt  output.txt
.research/iteration24/: error.txt  output.txt
.research/iteration25/: error.txt  output.txt
.research/iteration26/: error.txt  output.txt
.research/iteration27/: error.txt  output.txt
.research/iteration28/: error.txt  output.txt
.research/iteration3/: error.txt  output.txt
.research/iteration4/: error.txt  output.txt
.research/iteration5/: error.txt  final_results_2025-09-16_11-07-00.json  output.txt
.research/iteration6/: error.txt  output.txt  results_full_experiment_1757997453.json
.research/iteration7/: error.txt  output.txt
.research/iteration8/: error.txt  output.txt
.research/iteration9/: error.txt  output.txt
branches/research-20250916-032406-001/: index.html
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  preprocess.py  train.py
(+2 files in other folders)
