[project]
name = "zorropp"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "torch==2.1.0",
  "torchvision==0.16.0",
  "torchaudio==2.1.0",
  "timm==0.9.12",
  "transformers==4.36.2",
  "huggingface-hub==0.20.2",
  "pyyaml==6.0.1",
  "pandas==2.1.4",
  "pyarrow==14.0.2",
  "scipy==1.11.4",
  "pynvml==11.5.0",
  "opacus==1.4.1",
  "fvcore==0.1.5.post20221221",
  "triton==2.1.0",
  "requests==2.31.0",
  "pytest==7.4.3",
  "numpy==1.26.2",
  "matplotlib==3.8.2",
  "seaborn==0.13.0",
  "tqdm>=4.64.1",
  "glob2>=0.7"
]