[project]
name = "reflect-bo-experiments"
version = "1.0.0"
description = "Publication-ready experiments for the REFLECT-BO research paper."
authors = [{name = "AI Researcher", email = "researcher@example.com"}]
requires-python = ">=3.9"
license = {text = "Proprietary"}
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.39.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
    "openai>=1.3.0",
    "tiktoken>=0.5.0",
    "opacus>=1.4.0",
    "pykalman>=0.9.5",
    "codecarbon>=2.3.0",
    "pyyaml>=6.0",
    "datasets>=2.16.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.30.0",
    "accelerate>=0.25.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"