[project]
name = "reflect-bo-research"
version = "2.3.0"
description = "Experiments for REFLECT-BO: Self-Refining, Reliability-aware Bayesian Optimization for LLM Prompts."
authors = [
    {name = "Research Team", email = "contact@research.example.com"}
]
requires-python = ">=3.10"
license = { text = "MIT License" }

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "openai>=1.12.0",
    "tiktoken>=0.6.0",
    "opacus>=1.4.0",
    "pykalman==0.9.5",
    "codecarbon>=2.3.4",
    "pyyaml>=6.0.1",
    "datasets>=2.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.32.0",
    "accelerate>=0.27.0",
    "huggingface-hub>=0.20.0",
    "diskcache>=5.6.0",
    "statsmodels>=0.14.0",
    "jsonschema>=4.20.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
